@@ -307,6 +307,21 @@ begin
       end
     end
     
+    class MachineWithComplexPluralizationTest < ActiveRecord::TestCase
+      def setup
+        @model = new_model
+        @machine = StateMachine::Machine.new(@model, :status)
+      end
+      
+      def test_should_create_singular_with_scope
+        assert @model.respond_to?(:with_status)
+      end
+      
+      def test_should_create_plural_with_scope
+        assert @model.respond_to?(:with_statuses)
+      end
+    end
+    
     class MachineWithCallbacksTest < ActiveRecord::TestCase
       def setup
         @model = new_model
